--- a/work/asset/prepros-6.config
+++ b/work/asset/prepros-6.config
@@ -1,11 +1,13 @@
 {
-  "name": "b_step_01_layout",
+  "name": "asset",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
     "expandedDirs": [
-      "html"
+      "a_beginner/img",
+      "a_beginner/html",
+      "a_beginner"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
