--- a/work/asset/prepros-6.config
+++ b/work/asset/prepros-6.config
@@ -6,8 +6,9 @@
   "fileTree": {
     "expandedDirs": [
       "a_beginner/img",
-      "b_step_02_jquery",
-      "b_step_02_jquery/html"
+      "b_step_02_jquery/html",
+      "b_step_01_layout",
+      "b_step_01_layout/html"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
