--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
-# gitignore의 한줄 주석
+﻿# gitignore의 한줄 주석
 
 # prepros file
 prepros-6.config
 **/prepros-6.config
-
-# ai, psd
-*.ai
-**/*.ai
-*.psd
-**/*.psd
 
 # notignore
 notignore
